<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/16 15:06
 */

namespace DesignPatterns\Behavioral\Strategy;

interface Comparator
{
    public function compare($a, $b);
}
